# stealth

./: .gitignore  CLAUDE.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  VERCEL_BINARY_CHECK.md  VERIFICATION_CHECKLIST.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  user_story.md
.github/workflows/: ci.yml  deploy.yml  stealth-security-scan.yml  test.yml
core/: Cargo.toml  safe.sol  verify.sh  vulnerable.sol
core/benches/: scan_benchmarks.rs
core/contracts/: PRODUCTION-CONTRACTS.md  access-control-safe.sol  comprehensive-vulnerabilities.sol  cross-chain-bridge.sol  defi-yield-aggregator.sol  delegatecall-safe.sol  delegatecall-vulnerable.sol  governance-timelock.sol  modern-liquidity-pool.sol  modern-staking-vault.sol  multiple-vulnerabilities.sol  nft-staking-rewards.sol  production-governance-token.sol  production-staking-vault.sol  production-token-vesting.sol  production-yield-aggregator.sol  randomness-safe.sol  randomness-vulnerable.sol  reentrancy-safe.sol  reentrancy-vulnerable.sol  rewards-distributor.sol  test-patterns.sol  timestamp-safe.sol  timestamp-vulnerable.sol  token.sol  tx-origin-safe.sol  tx-origin-vulnerable.sol  unchecked-call-safe.sol  unchecked-call-vulnerable.sol
core/src/: ast_utils.rs  cfg.rs  detector_trait.rs  helpers.rs  heuristics.rs  lib.rs  lsp.rs  lsp_main.rs  main.rs  output.rs  scan.rs  suppression.rs  taint.rs  types.rs  wasm.rs
core/src/detectors/: README.md  access_control.rs  delegatecall.rs  dos_loops.rs  flash_loan.rs  front_running.rs  integer_overflow.rs  mod.rs  reentrancy.rs  storage_collision.rs  timestamp.rs  tx_origin.rs  unchecked_calls.rs  unchecked_erc20.rs  unsafe_random.rs
core/tests/: cli_integration.rs  false_positive_edge_cases.rs  property_tests.rs  snapshots.rs  trust_anchor_tests.rs  ts_export.rs
docs/: WASM_SIZE.md
vscode-ext/: .gitignore  package.json  pnpm-lock.yaml  tsconfig.json
vscode-ext/src/: extension.ts
web/: .env  .env.example  .gitignore  .vercelignore  package-lock.json  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/api/check-binary/: route.ts
web/app/api/scan/: route.ts
web/app/api/scan/[id]/: route.ts
web/app/components/results/: FindingCard.tsx  ResultsView.tsx  Statistics.tsx
web/app/components/scanner/: CodeEditor.tsx  Header.tsx  ScannerForm.tsx
web/app/lib/: scanner.ts
web/app/results/[id]/: loading.tsx  not-found.tsx  page.tsx
web/app/ui/: badge.tsx  button.tsx  card.tsx
