[package]
name = "core"
version = "0.4.0"
edition = "2024"

[dependencies]
tree-sitter = "0.26.3"
tree-sitter-solidity = "1.2.13"
tree-sitter-language = "0.1.6"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4.0"

[profile.release]
lto = true
codegen-units = 1
strip = true