[package]
name = "stealth-scanner"
version = "0.4.0"
edition = "2021"
authors = ["Sharif Parish"]
description = "A Solidity security scanner that detects common vulnerabilities through static analysis with intelligent pattern recognition"
license = "MIT"
repository = "https://github.com/saintparish4/stealth"
homepage = "https://github.com/saintparish4/stealth"
documentation = "https://github.com/saintparish4/stealth#readme"
keywords = ["solidity", "security", "scanner", "vulnerability", "smart-contracts"]
categories = ["development-tools", "security"]
readme = "../README.md"

[lib]
name = "stealth_scanner"
path = "src/lib.rs"

[[bin]]
name = "stealth"
path = "src/main.rs"

[dependencies]
tree-sitter = "0.26.3"
tree-sitter-solidity = "1.2.13"
tree-sitter-language = "0.1.6"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4.0"

[profile.release]
lto = true
codegen-units = 1
strip = true