[package]
name = "stealth-scanner"
version = "0.4.0"
edition = "2021"
authors = ["Sharif Parish"]
description = "A Solidity security scanner that detects common vulnerabilities through static analysis with intelligent pattern recognition"
license = "MIT"
repository = "https://github.com/saintparish4/stealth"
homepage = "https://github.com/saintparish4/stealth"
documentation = "https://github.com/saintparish4/stealth#readme"
keywords = ["solidity", "security", "scanner", "vulnerability", "smart-contracts"]
categories = ["development-tools", "security"]
readme = "../README.md"

[lib]
name = "stealth_scanner"
path = "src/lib.rs"
# cdylib is required by wasm-pack; rlib is used by the native binary.
# Both are built but only the relevant one is used per target.
crate-type = ["cdylib", "rlib"] 

[[bin]]
name = "stealth"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "stealth-lsp"
path = "src/lsp_main.rs"
required-features = ["lsp"]

[features]
default = ["cli"]
# cli: native binary with terminal colors, file I/O, directory walking, structured logging
cli = ["dep:clap", "dep:colored", "dep:tracing-subscriber"]
# codegen: enables ts-rs TypeScript type generation (CI / dev only)
codegen = ["dep:ts-rs"]
# wasm: browser/Node target via wasm-bindgen (no fs, no colored)
wasm = ["dep:wasm-bindgen", "dep:console_error_panic_hook"]
# lsp: VS Code extension backend via Language Server Protocol over stdio
lsp = ["dep:tower-lsp", "dep:tokio"]
 
[dependencies]
tree-sitter = "0.26.5"
tree-sitter-solidity = "1.2.13"
tree-sitter-language = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
smallvec = "1.15.1"
# Structured logging — always present; zero cost when no subscriber is installed.
tracing = "0.1.44"

# CLI-only (optional)
clap = { version = "4.5.59", features = ["derive"], optional = true }
colored = { version = "3.1.1", optional = true }
# CLI subscriber: formats and emits tracing events to stderr.
tracing-subscriber = { version = "0.3.23", features = ["env-filter"], optional = true }

# WASM-only (optional)
wasm-bindgen = { version = "0.2.108", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }

# LSP-only (optional)
tower-lsp = { version = "0.20", optional = true }
tokio = { version = "1.49.0", features = ["io-std", "rt-multi-thread", "macros"], optional = true }

# Codegen-only (optional) — TypeScript type generation
ts-rs = { version = "12", optional = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.8.2", features = ["html_reports"]}
proptest = "1.4.0" 

[[bench]] 
name = "scan_benchmarks" 
harness = false  

[profile.release]
lto = "thin"
codegen-units = 1
strip = true